Diagnose btn-close issue. Change z-index values

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -253,3 +253,7 @@ footer {
 input[type=text] {
     color: rgba(var(--theme-five), 1);
 }
+
+#alert-button {
+    z-index: 1031;
+}
